# rust-actix

./: .gitignore  Cargo.toml
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_posts_table.rs
src/: main.rs
src/routes/: auth_route.rs  home_routes.rs  mod.rs  post_routes.rs  user_routes.rs
src/routes/handlers/: auth_handler.rs  home_handler.rs  mod.rs  post_handler.rs  user_handler.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: api_response.rs  constants.rs  jwt.rs  mod.rs
