[package]
name = "rust-actix"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]


[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
entity = { path = "entity" }
env_logger = "0.11.5"
lazy_static = "1.5.0"
migration = { path = "migration" }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = "1.0.205"
serde_json = "1.0.122"
sha256 = "1.5.0"
